Califico las exposiciones de la semana anterior

--- a/exposiciones/README.org
+++ b/exposiciones/README.org
@@ -6,34 +6,34 @@
   la última sección de este archivo (/Criterios de evaluación grupal/
   y /por el docente/).
 
-  |------------+-----------------------------------------------------------------------------------------------+------------------------------------------------+----------+-------------------------------------------------------------------------------------------------+----------------------------------------------|
-  |      Fecha | Tema                                                                                          | Integrantes                                    | Video    | Documentos                                                                                      | Evaluación                                   |
-  |------------+-----------------------------------------------------------------------------------------------+------------------------------------------------+----------+-------------------------------------------------------------------------------------------------+----------------------------------------------|
-  | 2025.03.25 | Sistemas Operativos de Tiempo Real                                                            | David Emilio Nava  y David Emmanuel Tavera     | [[https://youtu.be/C3R-TZCtFzE][Ver aquí]] | [[./NavaDavid-TaveraDavid/NavaDavid-TaveraDavid_Escrito.pdf][Escrito]], [[./NavaDavid-TaveraDavid/NavaDavid-TaveraDavid_Presentacion.pdf][Presentación]]                                                                           | [[./NavaDavid-TaveraDavid/resultados_encuesta.pdf][Resultados de la encuesta]], [[./NavaDavid-TaveraDavid/evaluacion.org][Evaluación global]] |
-  | 2025.03.25 | Virtualización: Cómo los sistemas operativos gestionan múltiples entornos en un sólo hardware | Luisa Segura                                   | [[https://youtu.be/vOf8BJZMcDM][Ver aquí]] | [[./SeguraLuisa/SeguraLuisa_Documentación.pdf][Documentación]], [[./SeguraLuisa/SeguraLuisa_Presentación.pdf][Presentación]]                                                                     | [[./SeguraLuisa/resultados_encuesta.pdf][Resultados de la encuesta]], [[./SeguraLuisa/evaluacion.org][Evaluación global]] |
-  | 2025.03.25 | Orquestadores de contenedores: Docker, Kubernetes, Proxmox VE y Podman                        | Juan Pablo Vera  y Carlos López Estrada        | [[https://youtu.be/8MHt8pPeG7I][Ver aquí]] | [[./LopezEstrada_VeraMorales/VeraMoralesExposicion.pdf][Guión de la presentación]], [[./LopezEstrada_VeraMorales/LopezEstradaExposicion.pdf][Presentación]],                                                         | [[./LopezEstrada_VeraMorales/resultados_encuesta.pdf][Resultados de la encuesta]], [[./LopezEstrada_VeraMorales/evaluacion.org][Evaluación global]] |
-  |            |                                                                                               |                                                |          | Otros documentos no utilizados: [[https://github.com/user-attachments/files/19459210/Proxmox.VE.y.Podman.Vera.Morales.pdf][Proxmox VE y Podman (texto)]], [[https://github.com/user-attachments/files/19459191/Exposicion.Promox-Podman.pdf][Proxmox VE y Podman (presentación)]] |                                              |
-  | 2025.04.01 | Uso de los hilos en sistemas de comunicación: Chats interactivos                              | Hansel Tepal y Luis Salazar                    | [[https://youtu.be/W3SQQNOPMRQ][Ver aquí]] | [[./SalazarLuis-TepalHansel/Documentacion.pdf][Documentación]], [[./SalazarLuis-TepalHansel/Presentacion.pdf][Presentación]],                                                                    | [[SalazarLuis-TepalHansel/resultados_encuesta.pdf][Resultados de la encuesta]], [[SalazarLuis-TepalHansel/evaluacion.org][Evaluación global]] |
-  |            |                                                                                               |                                                |          | Ejemplos:  [[./SalazarLuis-TepalHansel/Ejemplos/Ejemplo_Calculadora][1-Calculadora]], [[./SalazarLuis-TepalHansel/Ejemplos/Ejemplo_ChatSimple][2-Chat simple]], [[./SalazarLuis-TepalHansel/Ejemplos/Ejemplo_ChatConcurrente][3-Chat con concurrencia]], [[./SalazarLuis-TepalHansel/Ejemplos/Ejemplo_ChatSincro][4-Chat sincronizado]]           |                                              |
-  | 2025.04.01 | Sistemas operativos para /edge computing/                                                     | Oscar Montiel y Samuel Torres                  | [[https://youtu.be/8sfBlBHC6vc][Ver aquí]] | [[./MontielJuarez-TorresSamuel/MontielOscar_TorresSamuel-Documentacion.pdf][Documentación]], [[MontielJuarez-TorresSamuel/MontielOscar_TorresSamuel-Presentacion.pdf][Presentación]]                                                                     | [[MontielJuarez-TorresSamuel/resultados_encuesta.pdf][Resultados de la encuesta]], [[MontielJuarez-TorresSamuel/evaluacion.org][Evaluación global]] |
-  | 2025.04.01 | Comparación de rendimiento de ejecución de tareas en distintos sistemas operativos            | Jocelyn Miramón e Isaías Iñaki Membrilla       | [[https://youtu.be/js0G5O4S8SI][Ver aquí]] | [[./MembrillaIsaias-MiramonJocelyn/MembrillaIsaias-MiramonJocelyn-Expo.pdf][Exposición]]                                                                                      | [[MembrillaIsaias-MiramonJocelyn/resultados_encuesta.pdf][Resultados de la encuesta]], [[MembrillaIsaias-MiramonJocelyn/evaluacion.org][Evaluación global]] |
-  | 2025.04.08 | Desduplicación                                                                                | Valentina Domínguez                            | [[https://youtu.be/XZtdGrWuafs][Ver aquí]] | [[./DominguezValentina/DominguezValentina_Doc.pdf][Documento]], [[./DominguezValentina/DominguezValentina_Presentacion.pptx][Presentación]]                                                                         | [[./DominguezValentina/resultados_encuesta.pdf][Resultados de la encuesta]], [[./DominguezValentina/evaluacion.org][Evaluación global]] |
-  | 2025.04.08 | Pacman: El motor de gestión de software en Arch Linux                                         | Andrea Saldaña y Emiliano Salgado              | [[https://youtu.be/HawGN4uj9bM][Ver aquí]] | [[./SaldañaAndrea-SalgadoRoman/Pacman_Exposicion_Saldaña_Salgado.pdf][Documento]], [[./SaldañaAndrea-SalgadoRoman/Presentación_Pacman_ArchLinux.pdf][Presentación]]                                                                         | [[./SaldañaAndrea-SalgadoRoman/resultados_encuesta.pdf][Resultados de la encuesta]], [[./SaldañaAndrea-SalgadoRoman/evaluacion.org][Evaluación global]] |
-  | 2025.04.08 | Manejo de recursos en la consola NES                                                          | Alfonso Rodríguez y Emilia Macarena Arriaga    | [[https://youtu.be/TFA06HB7x40][Ver aquí]] | [[./RodríguezAlfonso-ArriagaEmilia/DocumentoSISTOP_Arriaga_Zuluaga.pdf][Documento]], [[./RodríguezAlfonso-ArriagaEmilia/SISTOP_ManejoDeRecursosEnLosVideoJuegosDe8bits.pdf][Presentación]]                                                                         | [[./RodríguezAlfonso-ArriagaEmilia/resultados_encuesta.pdf][Resultados de la encuesta]], [[./RodríguezAlfonso-ArriagaEmilia/evaluacion.org][Evaluación global]] |
-  | 2025.04.14 | /Vacaciones de Semana Santa/                                                                  |                                                |          |                                                                                                 |                                              |
-  | 2025.04.21 | Unix y su papel en la historia de los Sistemas Operativos                                     | Alan Acosta y José Ángel Rubio                 | [[https://youtu.be/L2jatt2uY18][Ver aquí]] | [[./AcostaAlan-RubioAngel/Exposicion-SO-AcostaAlanyRubioAngel.pdf][Documento]], [[./AcostaAlan-RubioAngel/Presentacion-UNIX.pdf][Presentación]]                                                                         | [[https://encuestas.iiec.unam.mx/818655][Evaluación de los compañeros]]                 |
-  | 2025.04.21 | Mecanismos para mantener la coherencia en caché                                               | María Fernanda Ayala y Elizabeth Portilla      | [[https://youtu.be/FWyVcgZAISI][Ver aquí]] | [[./AyalaMaria-PortillaElizabeth/Documento_presentacion.pdf][Documento]], [[./AyalaMaria-PortillaElizabeth/PresentacionExpo_MecanismosParaMantenerLaCoherenciaEnCache.pdf][Presentación]]                                                                         | [[https://encuestas.iiec.unam.mx/494357][Evaluación de los compañeros]]                 |
-  | 2025.04.21 | TempleOS: Las implicaciones de un sistema operativo operando en el anillo 0 de protección     | Barvara Juárez y Jesus Talonia                 | [[https://youtu.be/2pWFz7PlSrw][Ver aquí]] | [[./JuarezBarvara_TaloniaJesus/TempleOS-Escrito.pdf][Documento]], [[./JuarezBarvara_TaloniaJesus/TempleOS-Presentacion.pdf][Presentación]]                                                                         | [[https://encuestas.iiec.unam.mx/927899][Evaluación de los compañeros]]                 |
-  | 2025.04.28 | Proceso de creación de un sistema Linux embebido                                              | Luis Antonio Ugartechea y Enrique Job Calderón |          |                                                                                                 |                                              |
-  | 2025.04.28 | Programación funcional                                                                        | Leonardo Mikel Cervantes y Arnau Roger Solé    |          |                                                                                                 |                                              |
-  | 2025.04.28 | Sistemas operativos para la nube                                                              | Carlos Cano y Ángel Cortés                     |          |                                                                                                 |                                              |
-  | 2025.05.05 | Sistemas de archivos NTFS y exFat                                                             | Yordi Josué Jiménez y Gustavo Valenzuela       |          |                                                                                                 |                                              |
-  | 2025.05.05 | Sistema de archivos Btrfs (B-Tree File System)                                                | Christian Gustavo Romero e Iker Ávila          |          |                                                                                                 |                                              |
-  | 2025.05.05 | Seguridad en el kernel: Cómo proteger a un SO contra rootkits                                 | Héctor Zambrano y Anuar Meléndez               |          |                                                                                                 |                                              |
-  | 2025.05.12 | Aspectos de sistemas operativos en los dispositivos IoT                                       | Rodrigo García Peñafort y Gustavo Santana      |          |                                                                                                 |                                              |
-  | 2025.05.12 | Sistemas Operativos en Equipos Náuticos                                                       | Luis Martínez y Joseph Urbano                  |          |                                                                                                 |                                              |
-  | 2025.05.12 | /Listener/: Propósito, intereacción y usos                                                    | Erick Nava Santiago y Eric Ramírez Valdovinos  |          |                                                                                                 |                                              |
-  |------------+-----------------------------------------------------------------------------------------------+------------------------------------------------+----------+-------------------------------------------------------------------------------------------------+----------------------------------------------|
+  |------------+-----------------------------------------------------------------------------------------------+-----------------------------------------------------------+----------+-------------------------------------------------------------------------------------------------+----------------------------------------------|
+  |      Fecha | Tema                                                                                          | Integrantes                                               | Video    | Documentos                                                                                      | Evaluación                                   |
+  |------------+-----------------------------------------------------------------------------------------------+-----------------------------------------------------------+----------+-------------------------------------------------------------------------------------------------+----------------------------------------------|
+  | 2025.03.25 | Sistemas Operativos de Tiempo Real                                                            | David Emilio Nava  y David Emmanuel Tavera                | [[https://youtu.be/C3R-TZCtFzE][Ver aquí]] | [[./NavaDavid-TaveraDavid/NavaDavid-TaveraDavid_Escrito.pdf][Escrito]], [[./NavaDavid-TaveraDavid/NavaDavid-TaveraDavid_Presentacion.pdf][Presentación]]                                                                           | [[./NavaDavid-TaveraDavid/resultados_encuesta.pdf][Resultados de la encuesta]], [[./NavaDavid-TaveraDavid/evaluacion.org][Evaluación global]] |
+  | 2025.03.25 | Virtualización: Cómo los sistemas operativos gestionan múltiples entornos en un sólo hardware | Luisa Segura                                              | [[https://youtu.be/vOf8BJZMcDM][Ver aquí]] | [[./SeguraLuisa/SeguraLuisa_Documentación.pdf][Documentación]], [[./SeguraLuisa/SeguraLuisa_Presentación.pdf][Presentación]]                                                                     | [[./SeguraLuisa/resultados_encuesta.pdf][Resultados de la encuesta]], [[./SeguraLuisa/evaluacion.org][Evaluación global]] |
+  | 2025.03.25 | Orquestadores de contenedores: Docker, Kubernetes, Proxmox VE y Podman                        | Juan Pablo Vera  y Carlos López Estrada                   | [[https://youtu.be/8MHt8pPeG7I][Ver aquí]] | [[./LopezEstrada_VeraMorales/VeraMoralesExposicion.pdf][Guión de la presentación]], [[./LopezEstrada_VeraMorales/LopezEstradaExposicion.pdf][Presentación]],                                                         | [[./LopezEstrada_VeraMorales/resultados_encuesta.pdf][Resultados de la encuesta]], [[./LopezEstrada_VeraMorales/evaluacion.org][Evaluación global]] |
+  |            |                                                                                               |                                                           |          | Otros documentos no utilizados: [[https://github.com/user-attachments/files/19459210/Proxmox.VE.y.Podman.Vera.Morales.pdf][Proxmox VE y Podman (texto)]], [[https://github.com/user-attachments/files/19459191/Exposicion.Promox-Podman.pdf][Proxmox VE y Podman (presentación)]] |                                              |
+  | 2025.04.01 | Uso de los hilos en sistemas de comunicación: Chats interactivos                              | Hansel Tepal y Luis Salazar                               | [[https://youtu.be/W3SQQNOPMRQ][Ver aquí]] | [[./SalazarLuis-TepalHansel/Documentacion.pdf][Documentación]], [[./SalazarLuis-TepalHansel/Presentacion.pdf][Presentación]],                                                                    | [[SalazarLuis-TepalHansel/resultados_encuesta.pdf][Resultados de la encuesta]], [[SalazarLuis-TepalHansel/evaluacion.org][Evaluación global]] |
+  |            |                                                                                               |                                                           |          | Ejemplos:  [[./SalazarLuis-TepalHansel/Ejemplos/Ejemplo_Calculadora][1-Calculadora]], [[./SalazarLuis-TepalHansel/Ejemplos/Ejemplo_ChatSimple][2-Chat simple]], [[./SalazarLuis-TepalHansel/Ejemplos/Ejemplo_ChatConcurrente][3-Chat con concurrencia]], [[./SalazarLuis-TepalHansel/Ejemplos/Ejemplo_ChatSincro][4-Chat sincronizado]]           |                                              |
+  | 2025.04.01 | Sistemas operativos para /edge computing/                                                     | Oscar Montiel y Samuel Torres                             | [[https://youtu.be/8sfBlBHC6vc][Ver aquí]] | [[./MontielJuarez-TorresSamuel/MontielOscar_TorresSamuel-Documentacion.pdf][Documentación]], [[MontielJuarez-TorresSamuel/MontielOscar_TorresSamuel-Presentacion.pdf][Presentación]]                                                                     | [[MontielJuarez-TorresSamuel/resultados_encuesta.pdf][Resultados de la encuesta]], [[MontielJuarez-TorresSamuel/evaluacion.org][Evaluación global]] |
+  | 2025.04.01 | Comparación de rendimiento de ejecución de tareas en distintos sistemas operativos            | Jocelyn Miramón e Isaías Iñaki Membrilla                  | [[https://youtu.be/js0G5O4S8SI][Ver aquí]] | [[./MembrillaIsaias-MiramonJocelyn/MembrillaIsaias-MiramonJocelyn-Expo.pdf][Exposición]]                                                                                      | [[MembrillaIsaias-MiramonJocelyn/resultados_encuesta.pdf][Resultados de la encuesta]], [[MembrillaIsaias-MiramonJocelyn/evaluacion.org][Evaluación global]] |
+  | 2025.04.08 | Desduplicación                                                                                | Valentina Domínguez                                       | [[https://youtu.be/XZtdGrWuafs][Ver aquí]] | [[./DominguezValentina/DominguezValentina_Doc.pdf][Documento]], [[./DominguezValentina/DominguezValentina_Presentacion.pptx][Presentación]]                                                                         | [[./DominguezValentina/resultados_encuesta.pdf][Resultados de la encuesta]], [[./DominguezValentina/evaluacion.org][Evaluación global]] |
+  | 2025.04.08 | Pacman: El motor de gestión de software en Arch Linux                                         | Andrea Saldaña y Emiliano Salgado                         | [[https://youtu.be/HawGN4uj9bM][Ver aquí]] | [[./SaldañaAndrea-SalgadoRoman/Pacman_Exposicion_Saldaña_Salgado.pdf][Documento]], [[./SaldañaAndrea-SalgadoRoman/Presentación_Pacman_ArchLinux.pdf][Presentación]]                                                                         | [[./SaldañaAndrea-SalgadoRoman/resultados_encuesta.pdf][Resultados de la encuesta]], [[./SaldañaAndrea-SalgadoRoman/evaluacion.org][Evaluación global]] |
+  | 2025.04.08 | Manejo de recursos en la consola NES                                                          | Alfonso Rodríguez y Emilia Macarena Arriaga               | [[https://youtu.be/TFA06HB7x40][Ver aquí]] | [[./RodríguezAlfonso-ArriagaEmilia/DocumentoSISTOP_Arriaga_Zuluaga.pdf][Documento]], [[./RodríguezAlfonso-ArriagaEmilia/SISTOP_ManejoDeRecursosEnLosVideoJuegosDe8bits.pdf][Presentación]]                                                                         | [[./RodríguezAlfonso-ArriagaEmilia/resultados_encuesta.pdf][Resultados de la encuesta]], [[./RodríguezAlfonso-ArriagaEmilia/evaluacion.org][Evaluación global]] |
+  | 2025.04.14 | /Vacaciones de Semana Santa/                                                                  |                                                           |          |                                                                                                 |                                              |
+  | 2025.04.21 | Unix y su papel en la historia de los Sistemas Operativos                                     | Alan Acosta y José Ángel Rubio                            | [[https://youtu.be/L2jatt2uY18][Ver aquí]] | [[./AcostaAlan-RubioAngel/Exposicion-SO-AcostaAlanyRubioAngel.pdf][Documento]], [[./AcostaAlan-RubioAngel/Presentacion-UNIX.pdf][Presentación]]                                                                         | [[./AcostaAlan-RubioAngel/resultados_encuesta.pdf][Resultados de la encuesta]], [[./AcostaAlan-RubioAngel/evaluacion.org][Evaluación global]] |
+  | 2025.04.21 | Mecanismos para mantener la coherencia en caché                                               | María Fernanda Ayala y Elizabeth Portilla                 | [[https://youtu.be/FWyVcgZAISI][Ver aquí]] | [[./AyalaMaria-PortillaElizabeth/Documento_presentacion.pdf][Documento]], [[./AyalaMaria-PortillaElizabeth/PresentacionExpo_MecanismosParaMantenerLaCoherenciaEnCache.pdf][Presentación]]                                                                         | [[./AyalaMaria-PortillaElizabeth/resultados_encuesta.pdf][Resultados de la encuesta]], [[./AyalaMaria-PortillaElizabeth/evaluacion.org][Evaluación global]] |
+  | 2025.04.21 | TempleOS: Las implicaciones de un sistema operativo operando en el anillo 0 de protección     | Barvara Juárez y Jesus Talonia                            | [[https://youtu.be/2pWFz7PlSrw][Ver aquí]] | [[./JuarezBarvara_TaloniaJesus/TempleOS-Escrito.pdf][Documento]], [[./JuarezBarvara_TaloniaJesus/TempleOS-Presentacion.pdf][Presentación]]                                                                         | [[./JuarezBarvara_TaloniaJesus/resultados_encuesta.pdf][Resultados de la encuesta]], [[./JuarezBarvara_TaloniaJesus/evaluacion.org][Evaluación global]] |
+  | 2025.04.28 | Proceso de creación de un sistema Linux embebido                                              | Luis Antonio Ugartechea y Enrique Job Calderón            | [[https://youtu.be/Xwwbp-mT6C0][Ver aquí]] | [[./CalderonEnrique-UgartecheaLuis/Embinux-texto.pdf][Documento]], [[./CalderonEnrique-UgartecheaLuis/Embinux-presentacion.pdf][Presentación]], [[./CalderonEnrique-UgartecheaLuis/Embinux-texto.tex][Documento (fuente)]], [[./CalderonEnrique-UgartecheaLuis/Embinux-presentacion.md][Presentación (fuente)]]                              | [[https://encuestas.iiec.unam.mx/869312][Evaluación de los compañeros]]                 |
+  | 2025.04.28 | Programación funcional                                                                        | Leonardo Mikel Cervantes, Arnau Roger Solé y Javier Arias |          |                                                                                                 | [[https://encuestas.iiec.unam.mx/277119][Evaluación de los compañeros]]                 |
+  | 2025.04.28 | Sistemas operativos para la nube                                                              | Carlos Cano y Ángel Cortés                                | [[https://youtu.be/27dpaty8a80][Ver aquí]] |                                                                                                 | [[https://encuestas.iiec.unam.mx/643374][Evaluación de los compañeros]]                 |
+  | 2025.05.05 | Sistemas de archivos NTFS y exFat                                                             | Yordi Josué Jiménez y Gustavo Valenzuela                  |          |                                                                                                 |                                              |
+  | 2025.05.05 | Sistema de archivos Btrfs (B-Tree File System)                                                | Christian Gustavo Romero e Iker Ávila                     |          |                                                                                                 |                                              |
+  | 2025.05.05 | Seguridad en el kernel: Cómo proteger a un SO contra rootkits                                 | Héctor Zambrano y Anuar Meléndez                          |          |                                                                                                 |                                              |
+  | 2025.05.12 | Aspectos de sistemas operativos en los dispositivos IoT                                       | Rodrigo García Peñafort y Gustavo Santana                 |          |                                                                                                 |                                              |
+  | 2025.05.12 | Sistemas Operativos en Equipos Náuticos                                                       | Luis Martínez y Joseph Urbano                             |          |                                                                                                 |                                              |
+  | 2025.05.12 | /Listener/: Propósito, intereacción y usos                                                    | Erick Nava Santiago y Eric Ramírez Valdovinos             |          |                                                                                                 |                                              |
+  |------------+-----------------------------------------------------------------------------------------------+-----------------------------------------------------------+----------+-------------------------------------------------------------------------------------------------+----------------------------------------------|
   # El semestre termina el 24 de mayo. Programo exposiciones hasta la semana del 12.
   # van 33 alumnos que registran tema.
 * ¿Y el tema?
